# Embarcatech

./: README.md
Atividade_3_MQTT_2/: configura_geral.h  main.c  main_auxiliar.c
Atividade_5/: Atividade_5.c  funcao_atividade_.c  funcao_atividade_.h
Multitarefa_RTOS/: CMakeLists.txt
Multitarefa_RTOS/src/: CMakeLists.txt  Multitarefa_RTOS.c  pwm.c  pwm.h
NeoControlLab/: CMakeLists.txt  NeoControlLab.c  efeito_curva_ar.c  efeito_curva_ar.h  numeros_neopixel.c  numeros_neopixel.h  testes_cores.h
NeoControlLab/LabNeoPixel/: neopixel_driver.h
Tarefa1/: CMakeLists.txt  Tarefa1.c
TempCycleDMA09/: CMakeLists.txt  irq_handlers.c  main.c
USB_CDC/: CMakeLists.txt  USB_CDC.c
access_point/: CMakeLists.txt  access_point.c
lixeira/: CMakeLists.txt  index.html  lixeira.c  tof.c  tof.h
picow_access_point08/: CMakeLists.txt  picow_access_point.c
semaf/: CMakeLists.txt  semaf.c
semaf_RTOS/: CMakeLists.txt
semaf_RTOS/lib/FreeRTOS-Kernel/examples/coverity/: FreeRTOSConfig.h
semaf_RTOS/src/: CMakeLists.txt  semaf_RTOS.c
system_RTOS/: CMakeLists.txt
system_RTOS/src/: CMakeLists.txt  pwm.c  system_RTOS.c
tarefa2/: CMakeLists.txt  Readme.md  neopixel_pio.c
tarefa5/: CMakeLists.txt  font.c  font.h  tarefa5.c
tarefa_3/: CMakeLists.txt  blink.pio  tarefa_3.c
wifi_project/: CMakeLists.txt  font.c  font.h  wifi_project.c
